Fix demo link for barbería project
Updated project demo link for the barbería landing page.

--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -31,7 +31,8 @@
         <h3>Barbería — Landing Page</h3>
         <p>Diseño responsive + SEO básico + buen rendimiento.</p>
 
-       <a href="../barberia/index.html">Ver demo</a>
+       <a href="https://TU-BARBERIA.netlify.app" target="_blank" rel="noopener">Ver demo</a>
+
        <a href="#">Ver código</a>
 
       </article>
@@ -69,3 +70,4 @@
   </script>
 </body>
 </html>
+
