Fix HTML encoding and update portfolio link

--- a/Barberia/index.html
+++ b/Barberia/index.html
@@ -33,7 +33,7 @@
         <a href="#opiniones">Opiniones</a>
         <a class="btn" href="#contacto">Reservar</a>
       </div>
-             <a href="../Portafolio/index.html">← Volver al portafolio</a>
+             <a href="https://voluble-souffle-48fa94.netlify.app/">← Volver al portafolio</a>
 
     </nav>
   </header>
@@ -210,3 +210,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
